--- a/style001.css
+++ b/style001.css
@@ -44,7 +44,7 @@ p {
     display:block;
 }
 
-ul {
+.NavBar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -52,7 +52,7 @@ ul {
     background-color: #333;
 }
 
-li {
+.NavBarItem {
     float: left;
 }
 
