--- a/style001.css
+++ b/style001.css
@@ -15,6 +15,7 @@ h3 {
 
 h4 {
     font-family:Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 p {
@@ -218,4 +219,9 @@ a {
     to {
         opacity: 1
     }
+}
+
+.imgcontainer {
+    padding: 3px;
+    background-color: rgb(34, 31, 31);
 }
