--- a/style001.css
+++ b/style001.css
@@ -227,8 +227,9 @@ a {
 }
 
 .fill_container {
-    flex-grow: 1;
-    border: none;
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0px;
 }
