--- a/about/style.css
+++ b/about/style.css
@@ -1,6 +1,5 @@
 body {
     overflow: hidden;
-    background: rgb(34,193,195);
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
@@ -30,6 +29,7 @@ h4 {
 p {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    text-align: center;
 }
 
 .container {
@@ -38,6 +38,29 @@ p {
     color: white;
 }
 
-a {
+.content {
+    width: 700px;
+    border: 4px solid #B8BFC5;
+    padding: 20px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content img {
+    margin-right: 15px;
+    float: left;
+}
+
+.content h3,
+.content p{
+    margin-left: 15px;
+    display: block;
+    margin: 2px 0 0 0;
     font-family: Arial, Helvetica, sans-serif;
+}
+a {
+    font-family: arial;
+    text-decoration: none;
+    color: black;
 }
